--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ exclude: [
     "sass/",
     "js/",
     "CONTRIBUTORS.md",
+    "gulpfile.js",
+    "package.json",
     "README.md",
     "README(gh-pages).md",
     "*.sh",
