--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gulp-cssnano": "^2.1.2",
     "gulp-load-plugins": "^1.2.0",
     "gulp-rename": "^1.2.2",
+    "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.3"
