Added: File with an index of number we have in db

--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,6 @@ exclude: [
     "package.json",
     "README.md",
     "README(gh-pages).md",
-    "*.sh",
-    "*.awk",
+    "*.jignore",
     "*ffs_*"
 ]
