--- a/package.json
+++ b/package.json
@@ -5,25 +5,26 @@
   "main": "index.html",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-changed": "^1.3.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-load-plugins": "^1.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.5.3"
+    "browser-sync" : "^2.13.0",
+    "gulp" : "^3.9.1",
+    "gulp-autoprefixer" : "^3.1.0",
+    "gulp-changed" : "^1.3.0",
+    "gulp-concat" : "^2.6.0",
+    "gulp-cssnano" : "^2.1.2",
+    "gulp-load-plugins" : "^1.2.4",
+    "gulp-plumber" : "^1.1.0",
+    "gulp-sass" : "^2.3.2",
+    "gulp-sourcemaps" : "^1.6.0",
+    "gulp-uglify" : "^1.5.4"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified. Soz m8\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git@ssh.github.com:CemraJC/majortraining.git"
   },
   "author": "Jason Cemra",
-  "license": "GPLv3"
+  "license": "GPL-3.0"
 }
+
